Modification config Docker

--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -1,5 +1,5 @@
 [program:gunicorn]
-command=gunicorn -b :3000 --log-file /data/gunicorn.log flaskminisab:app
+command=gunicorn -c /app/gunicorn.py flaskminisab:app
 autostart=true
 user=minisab
 directory=/app
@@ -11,3 +11,6 @@ stdout_logfile=/data/cron.log
 
 [supervisord]
 pidfile=/data/supervisor.pid
+
+[supervisorctl]
+serverurl=unix:///data/supervisor.sock
