Utilisation de nginx
plus correction bug plus de recherche

--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -9,6 +9,10 @@ stdout_logfile=/data/gunicorn_out.log
 command=cron -f
 stdout_logfile=/data/cron.log
 
+[program:nginx]
+autostart=true
+command=nginx
+
 [supervisord]
 pidfile=/data/supervisor.pid
 
