--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.5
 #    && apt-get install -y python3 python3-pip python3-requests
 
 RUN apt-get update \
-    && apt-get install -y cron sudo supervisor
+    && apt-get install -y cron sudo supervisor nginx
 
 RUN pip3 install requests peewee flask gunicorn redis
 
@@ -16,6 +16,9 @@ RUN groupadd -r minisab && useradd --no-log-init -r -g minisab minisab
 RUN mkdir /app
 
 RUN mkdir /data
+
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY minisab.nginx.conf /etc/nginx/sites-available/default
 
 WORKDIR /app
 
@@ -47,6 +50,6 @@ RUN crontab -l -u minisab
 
 VOLUME /data
 
-EXPOSE 3000
+EXPOSE 80
 
 CMD supervisord -c /app/supervisor.conf -n
