Modification sur docker

--- a/docker/supervisor.conf
+++ b/docker/supervisor.conf
@@ -4,6 +4,7 @@ autostart=true
 user=minisab
 directory=/app
 stdout_logfile=/data/gunicorn_out.log
+stderr_logfile=/data/gunicorn_err.log
 
 [program:cron]
 command=cron -f
