--- a/docker/docker-compose-prod.yml
+++ b/docker/docker-compose-prod.yml
@@ -11,13 +11,14 @@ services:
     build:
       context: .
       args:
-        - DEFAULT_NGINX=$DEFAULT_NGINX
-        - STATIC_NGINX=$STATIC_NGINX
+        - DEFAULT_NGINX=nginx-prod.conf
+        - STATIC_NGINX=minisab/static
       dockerfile: Dockerfile_nginx
   cron:
     build:
       context: .
       dockerfile: Dockerfile_cron
+    image: minisab_cron:1.0
     depends_on:
       - "nginx"
     networks:
