--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -6,13 +6,13 @@ services:
       dockerfile: Dockerfile_minisab
     image: minisab:dev
     volumes:
-      - ./minisab:/app
+      - ..:/app
       - ./gunicorn-dev.py:/app/gunicorn.py
   nginx:
     image: nginx:1.12
     volumes:
-      - $DEFAULT_NGINX:/etc/nginx/conf.d/default.conf
-      - $STATIC_NGINX:/usr/share/nginx/html/minisab/static/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../static:/usr/share/nginx/html/minisab/static/
   sabnzbd:
     image: "sabnzbd/sabnzbd"
     environment:
