--- a/docker/docker-compose-prod.yml
+++ b/docker/docker-compose-prod.yml
@@ -2,18 +2,18 @@ version: '2'
 services:
   minisab:
     build:
-      context: .
-      dockerfile: Dockerfile_minisab_prod
+      context: ..
+      dockerfile: docker/Dockerfile_minisab_prod
   nginx:
     depends_on:
       - "minisab"
     image: minisab_nginx:1.0
     build:
-      context: .
+      context: ..
       args:
-        - DEFAULT_NGINX=nginx-prod.conf
-        - STATIC_NGINX=../minisab/static
-      dockerfile: Dockerfile_nginx
+        - DEFAULT_NGINX=docker/nginx-prod.conf
+        - STATIC_NGINX=static
+      dockerfile: docker/Dockerfile_nginx
   cron:
     build:
       context: .
