--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - MINISAB_HOST_SAB=$MINISAB_HOST_SAB
       - MINISAB_PORT_SAB=$MINISAB_PORT_SAB
       - MINISAB_CLE_SAB=$MINISAB_CLE_SAB
-    image: minisab:2.9b
+    image: minisab:2.10
     networks:
       minisab_default:
   nginx:
@@ -24,7 +24,7 @@ services:
     networks:
       minisab_default:
   redis:
-      image: redis:4.0.8
+      image: redis:4.0.9
       networks:
         minisab_default:
 volumes:
