--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,21 +2,21 @@ version: '2'
 services:
   minisab:
     build:
-      context: ..
-      dockerfile: docker/Dockerfile_minisab_prod
+      context: python
+      dockerfile: Dockerfile_minisab_prod
   nginx:
     depends_on:
       - "minisab"
     image: minisab_nginx:1.1
     build:
-      context: ..
+      context: nginx
       args:
-        - DEFAULT_NGINX=docker/nginx-prod.conf
+        - DEFAULT_NGINX=nginx-prod.conf
         - STATIC_NGINX=static
-      dockerfile: docker/Dockerfile_nginx
+      dockerfile: Dockerfile_nginx
   cron:
     build:
-      context: .
+      context: cron
       dockerfile: Dockerfile_cron
     image: minisab_cron:1.2
     depends_on:
