--- a/python/Dockerfile_minisab
+++ b/python/Dockerfile_minisab
@@ -10,4 +10,4 @@ WORKDIR /app
 
 VOLUME /app
 
-CMD gunicorn -c /app/gunicorn-dev.py flaskminisab:app
+CMD gunicorn -c /app/gunicorn-dev.py minisab:app
