--- a/python/Dockerfile_minisab_prod
+++ b/python/Dockerfile_minisab_prod
@@ -6,14 +6,16 @@ RUN export LC_ALL=C.UTF-8 LANG=C.UTF-8
 
 RUN mkdir /app
 
-RUN mkdir /app/templates
-
 RUN mkdir /data
 
 WORKDIR /app
 
-ADD *.py /app/
+ADD gunicorn.py /app/
+
+ADD prod.py /app
 
 ADD minisab /app/minisab
 
-CMD gunicorn -c /app/gunicorn.py minisab:app
+ADD instance /app/instance
+
+CMD gunicorn -c /app/gunicorn.py prod:app
