--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -9,8 +9,10 @@ services:
       - data:/data
     environment:
       - MINISAB_AUTRE_DBFILE=/app/minisab.db
+      - MINISAB_AUTRE_DUMPDIR=/data
       - MINISABINV_CONFIG_FILE=/data/config.json
       - MINISABINV_AUTRE_CONFIG=redis_docker.py
+      - MINISABINV_URL_EXTERNE=${MINISABINV_URL_EXTERNE}
     image: minisab:dev
     logging:
       driver: "json-file"
