--- a/nginx/Dockerfile_nginx
+++ b/nginx/Dockerfile_nginx
@@ -1,8 +1,11 @@
 FROM nginx:1.12
 ARG DEFAULT_NGINX
 ARG STATIC_NGINX
+ARG VAR_TEST
 
+# RUN groupadd -g 1000 -f nginx && useradd -u 1000 -M -g 1000 nginx
+RUN echo $VAR_TEST
 
 ADD $DEFAULT_NGINX /etc/nginx/conf.d/default.conf
 ADD $STATIC_NGINX /usr/share/nginx/html/minisab/static
-RUN chmod 0755 -R /usr/share/nginx/html/minisab/static
+RUN chown -R nginx:nginx /usr/share/nginx/html
