--- a/python/Dockerfile_minisab
+++ b/python/Dockerfile_minisab
@@ -10,4 +10,4 @@ WORKDIR /app
 
 VOLUME /app
 
-CMD gunicorn -c /app/gunicorn-dev.py dev:app
+CMD export FLASK_APP=dev.py && export FLASK_DEBUG=1 && export FLASK_RUN_PORT=3000 && export FLASK_RUN_HOST=0.0.0.0 && flask run
